--- a/mako/config
+++ b/mako/config
@@ -1,22 +1,22 @@
-font=UbuntuMono 12.5
-
+sort=-time
+layer=overlay
 background-color=#1e1e2e
 text-color=#d8d8d8
 width=315
 height=200
-padding=10
-margin=10
-progress-color=over #eceff480
-icon-path=/usr/share/icons/Arc-X-D
-max-icon-size=70
-layer=overlay
-
-border-size=4
-border-radius=0
+border-size=3
 border-color=#89b4fa
-
+border-radius=12
+icons=1
+max-icon-size=64
 default-timeout=3000
+ignore-timeout=1
+font=monospace 14
 
 [urgency=high]
+border-color=#f38ba8
+default-timeout=0
 
-ignore-timeout=1
+[category=mpd]
+default-timeout=2000
+group-by=category
